--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Music Box</string>
+    <string name="app_name">Beat Box</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_home_list">Music Box</string>
+    <string name="title_activity_home_list">Beat Box</string>
     <string name="title_activity_new_photo">Add new music</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_person">User</string>
@@ -13,13 +13,12 @@
     <string name="save_button_text">Publish</string>
     <string name="cancel_button_text">Cancel</string>
 
-    <string name="title_activity_login">Music Box</string>
+    <string name="title_activity_login">Beat Box</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="login_intro">We will never post anything on your facebook wall</string>
     <string name="login">Log in</string>
     <string name="logout">Log out</string>
-    <string name="app_id">408877072597542</string>
     <string name="no_data">No data</string>
 
 </resources>
